@@ -12,6 +12,7 @@ TGUI 0.8.6  (TBD)
 - Disabling tabs widget caused selected tab to be deselected
 - Vertical alignment in Label didn't work correctly when there was a scrollbar
 - Knob never responded to mouse events on places where the background texture was transparent
+- Text color wasn't updated in MenuBar when disabling and re-enabling widget
 
 
 TGUI 0.8.5  (6 April 2019)
